# assay

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.assay-engine  Dockerfile.sh  LICENSE  NOTICE  README.md  RELEASING.md  SKILL.md  dprint.json  llms.txt  moon.yml  renovate.json  wrangler.toml
crates/assay-auth/: Cargo.toml
crates/assay-auth/src/: admin.rs  authz.rs  biscuit.rs  ctx.rs  error.rs  external_jwt.rs  gate.rs  jwt.rs  lib.rs  oidc.rs  passkey.rs  password.rs  router.rs  schema.rs  session.rs  state.rs
crates/assay-auth/src/oidc_provider/: admin.rs  auth_params.rs  authorize.rs  binding.rs  consent.rs  discovery.rs  federation.rs  handlers.rs  introspect.rs  issuer_validation.rs  jwks.rs  mod.rs  revoke.rs  store.rs  token.rs  types.rs  upstreams_public.rs  userinfo.rs
crates/assay-auth/src/store/: mod.rs  postgres.rs  sqlite.rs  types.rs
crates/assay-auth/src/zanzibar/: eval.rs  mod.rs  postgres.rs  resolve.rs  schema.rs  sqlite.rs  store.rs  types.rs
crates/assay-auth/tests/: oidc_federation.rs  oidc_provider.rs  zanzibar.rs
crates/assay-core/: Cargo.toml
crates/assay-core/src/: lib.rs
crates/assay-core/src/store/: workflow.rs
crates/assay-dashboard/: Cargo.toml
crates/assay-dashboard/assets/auth/: app.js  index.html  login.css  login.html  login.js  style.css
crates/assay-dashboard/assets/auth/components/: api.js  audit.js  keys.js  oidc_clients.js  oidc_upstream.js  sessions.js  users.js  zanzibar.js
crates/assay-dashboard/assets/engine/: app.js  index.html  style.css
crates/assay-dashboard/assets/engine/components/: api.js  audit.js  config.js  info.js  instances.js  modules.js
crates/assay-dashboard/assets/shared/: cross-nav.css  cross-nav.js
crates/assay-dashboard/assets/vault/: app.js  index.html  style.css
crates/assay-dashboard/assets/workflow/: app.js  index.html  theme.css
crates/assay-dashboard/assets/workflow/components/: actions.js  detail.js  modal.js  schedules.js  select.js  settings.js  workers.js
crates/assay-dashboard/assets/workflow/styles/: 10-sidebar.css  11-status-bar.css  20-workflow-rows.css  21-tables.css  30-detail-panel.css  40-modal.css  41-row-actions.css  42-select.css  43-links.css  50-pipeline.css  51-events.css  60-buttons.css  62-cards.css
crates/assay-dashboard/src/: assets.rs  auth_router.rs  ctx.rs  engine_router.rs  lib.rs  router.rs  vault_router.rs  whitelabel.rs
crates/assay-domain/: Cargo.toml
crates/assay-domain/src/: lib.rs
crates/assay-domain/src/engine/: mod.rs  pg.rs  sqlite.rs
crates/assay-domain/src/events/: mod.rs  pg.rs  pg_test.rs  sqlite.rs  sqlite_test.rs  trait_.rs
crates/assay-domain/src/store/: mod.rs  workflow.rs
crates/assay-domain/src/types/: mod.rs  workflow.rs
crates/assay-domain/tests/: event_bus_trait_shape.rs
crates/assay-engine/: Cargo.toml
crates/assay-engine/examples/: postgres.toml  seed.sh  sqlite.toml
crates/assay-engine/examples/init/: init.lua
crates/assay-engine/examples/seed-sample/: README.md  seed.lua
crates/assay-engine/examples/zanzibar/: 01-group.json  02-auth.json  03-vault-path.json  04-workflow.json  05-workflow-step.json  06-engine.json  07-vault.json
crates/assay-engine/src/: config.rs  embedded.rs  engine_api.rs  init.rs  lib.rs  seed.rs  server.rs  state.rs
crates/assay-engine/tests/: engine_smoke.rs
crates/assay-engine/tests-e2e/: README.md  _setup.ts  auth-console.spec.ts  cross-nav.spec.ts  engine-console.spec.ts  moon.yml  package-lock.json  package.json  playwright.config.ts  run.sh  vault-console.spec.ts
crates/assay-engine/tests-e2e/fixtures/: engine.toml  seed.sh
crates/assay-engine/tests-lua/: auth.test.lua  core.test.lua  e2e.test.lua  moon.yml  run.lua  run.sh  worker.lua  workflow.test.lua
crates/assay-vault/: Cargo.toml
crates/assay-vault/src/: audit.rs  collections.rs  ctx.rs  dynamic.rs  error.rs  items.rs  kv.rs  lib.rs  personal_vault.rs  router.rs  schema.rs  share.rs  transit.rs  zanzibar.rs
crates/assay-vault/src/bitwarden_compat/: accounts.rs  ciphers.rs  folders.rs  identity.rs  mod.rs  profile.rs  sync.rs  types.rs
crates/assay-vault/src/cloud/: gcp_jwt.rs  mod.rs  sigv4.rs
crates/assay-vault/src/crypto/: aead.rs  kek.rs  kek_rotate.rs  kek_seal.rs  kek_store.rs  mod.rs  seal_state.rs  sealing.rs
crates/assay-vault/src/router/: collections.rs  dynamic.rs  kv.rs  share.rs  sys.rs  transit.rs
crates/assay-vault/src/sealing/: kms_aws.rs  kms_gcp.rs  mod.rs
crates/assay-vault/src/store/: mod.rs  postgres.rs  sqlite.rs
crates/assay-vault/tests/: kv.rs  smoke.rs  transit.rs
crates/assay-workflow/: Cargo.toml  moon.yml
crates/assay-workflow/migrations/surrealdb/: 00_init.surql  01_workflow_fields.surql  02_activity_timer_signal_fields.surql  03_schedules_workers_snapshots.surql
crates/assay-workflow/src/: activities.rs  archival.rs  auth_mode.rs  children.rs  ctx.rs  dispatch_recovery.rs  engine.rs  events.rs  events_cleanup.rs  health.rs  lib.rs  lifecycle.rs  namespaces.rs  scheduler.rs  schedules.rs  signals.rs  state.rs  tasks.rs  timers.rs  types.rs  workers.rs
crates/assay-workflow/src/api/: activities.rs  api_keys.rs  auth.rs  dashboard.rs  events.rs  meta.rs  mod.rs  namespaces.rs  openapi.rs  public.rs  queues.rs  schedules.rs  tasks.rs  whitelabel.rs  workers.rs  workflow_tasks.rs  workflows.rs
crates/assay-workflow/src/dashboard/: app.js  index.html  style.css  theme.css
crates/assay-workflow/src/engine/: activities.rs  children.rs  collections.rs  mod.rs  tasks.rs  workflows.rs
crates/assay-workflow/src/store/: mod.rs  postgres.rs  sqlite.rs  surrealdb.rs
crates/assay-workflow/tests/: api_integration.rs  auth_test.rs  engine_events_cleanup.rs  orchestration.rs  postgres_store.rs  smoke_backends.rs  sse_replay.rs  subscribe_trait_bounds.rs
crates/assay-workflow/tests-e2e/: README.md  moon.yml  package-lock.json  package.json  pipeline.spec.ts  playwright.config.ts  run.lua
crates/assay-workflow/tests-e2e/fixtures/: demo-worker.lua
crates/assay-workflow/tests/common/: harness.rs  mod.rs
(+882 files in other folders)
