[workspace]
resolver = "2"
members = [
  "crates/assay",
  "crates/assay-auth",
  "crates/assay-core",
  "crates/assay-dashboard",
  "crates/assay-engine",
  "crates/assay-workflow",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"

[profile.release]
opt-level = "z" # Optimize for size
lto = true # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
strip = true # Strip debug symbols
panic = "abort" # Abort on panic (smaller binary)
