[package]
name = "assay-auth"
version = "0.1.0"
categories = ["authentication", "cryptography", "asynchronous"]
edition = "2024"
keywords = ["oidc", "zanzibar", "passkey", "biscuit", "auth"]
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"
description = "Authentication, OIDC (client + provider), passkey, Argon2, JWT, Biscuit capability tokens, session management, and Zanzibar-style authorization for assay-engine."

[features]
# Default builds: full auth meta-feature plus both backends. Per v0.1.2
# alignment in plan 12c, `auth-biscuit` is intentionally NOT in the
# default `auth` meta-feature (saves ~2h of phase 4 work + the
# biscuit-auth dependency unless explicitly opted in via `auth-biscuit`).
default = [
  "auth",
  "backend-postgres",
  "backend-sqlite",
]

# Meta-feature pulling every default-on auth module in. Biscuit is an
# explicit opt-in (see `auth-biscuit` below) and is not pulled by default.
auth = [
  "auth-oidc",
  "auth-oidc-provider",
  "auth-passkey",
  "auth-password",
  "auth-jwt",
  "auth-session",
  "auth-zanzibar",
]

auth-oidc = ["dep:openidconnect", "auth-session"]
auth-oidc-provider = ["auth-oidc", "dep:oxide-auth", "dep:askama"]
auth-passkey = ["dep:webauthn-rs", "auth-session"]
auth-password = ["dep:argon2", "dep:password-hash"]
auth-jwt = ["dep:jsonwebtoken", "dep:parking_lot", "dep:ed25519-dalek", "dep:rand_core_06"]
# Opt-in: capability tokens with Datalog policy. Future use; not in
# default `auth` per v0.1.2 alignment.
auth-biscuit = ["dep:biscuit-auth"]
auth-session = []
auth-zanzibar = []

backend-postgres = ["dep:sqlx", "sqlx/postgres"]
backend-sqlite = ["dep:sqlx", "sqlx/sqlite"]

[dependencies]
assay-domain = { path = "../assay-domain", version = "0.1" }

# Shared primitives — small, used unconditionally
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
cookie = "0.18"
data-encoding = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"
url = "2"
utoipa = "5"

# Feature-gated module dependencies
argon2 = { version = "0.5", optional = true }
askama = { version = "0.12", optional = true }
biscuit-auth = { version = "6", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["pem", "pkcs8", "rand_core"] }
jsonwebtoken = { version = "10", optional = true, features = ["rust_crypto", "use_pem"] }
openidconnect = { version = "4", optional = true }
oxide-auth = { version = "0.6", optional = true }
parking_lot = { version = "0.12", optional = true }
password-hash = { version = "0.5", optional = true }
# ed25519-dalek 2.x still uses rand_core 0.6 for its key generation API.
rand_core_06 = { package = "rand_core", version = "0.6", optional = true, features = ["getrandom"] }
webauthn-rs = { version = "0.5", optional = true }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any"], optional = true }

# HTTP client for OIDC discovery / userinfo / JWKS fetch
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
rstest = "0.26"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
