[package]
name = "assay-auth"
version = "0.3.0"
categories = ["authentication", "cryptography", "asynchronous"]
edition = "2024"
keywords = ["oidc", "zanzibar", "passkey", "biscuit", "auth"]
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"
description = "Authentication, OIDC (client + provider), passkey, Argon2, JWT, Biscuit capability tokens, session management, and Zanzibar-style authorization for assay-engine."

[features]
# Default builds: full auth meta-feature plus both backends. Biscuit
# (capability tokens with Datalog policy) is foundational and ships
# unconditionally — it's a top-level dependency, not feature-gated.
default = [
  "auth",
  "backend-postgres",
  "backend-sqlite",
]

# Meta-feature pulling every default-on auth module in. Biscuit is
# foundational (capability tokens with Datalog policy) and ships
# unconditionally — there is intentionally no `auth-biscuit` feature
# flag; the biscuit module always links so engine boot can rely on it.
auth = [
  "auth-oidc",
  "auth-oidc-provider",
  "auth-passkey",
  "auth-password",
  "auth-jwt",
  "auth-session",
  "auth-zanzibar",
]

auth-oidc = ["dep:openidconnect", "auth-session"]
auth-oidc-provider = [
  "auth-oidc",
  "auth-jwt",
  "auth-password",
  "dep:oxide-auth",
  "dep:askama",
  "dep:sha2",
  "dep:subtle",
]
auth-passkey = ["dep:webauthn-rs", "auth-session"]
auth-password = ["dep:argon2", "dep:password-hash"]
auth-jwt = ["dep:jsonwebtoken", "dep:ed25519-dalek", "dep:rand_core_06"]
auth-session = []
auth-zanzibar = []

backend-postgres = ["dep:sqlx", "sqlx/postgres"]
backend-sqlite = ["dep:sqlx", "sqlx/sqlite"]

[dependencies]
assay-domain = { path = "../assay-domain", version = "0.2" }

# Shared primitives — small, used unconditionally
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
# Capability tokens with Datalog policy. Foundational (always-on);
# AuthCtx carries a BiscuitConfig field unconditionally.
biscuit-auth = "6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
cookie = "0.18"
data-encoding = "2"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"
url = "2"
utoipa = "5"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Feature-gated module dependencies
argon2 = { version = "0.5", optional = true }
askama = { version = "0.12", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["pem", "pkcs8", "rand_core"] }
jsonwebtoken = { version = "10", optional = true, features = ["rust_crypto", "use_pem"] }
openidconnect = { version = "4", optional = true }
oxide-auth = { version = "0.6", optional = true }
password-hash = { version = "0.5", optional = true }
# ed25519-dalek 2.x still uses rand_core 0.6 for its key generation API.
rand_core_06 = { package = "rand_core", version = "0.6", optional = true, features = ["getrandom"] }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2", optional = true }
# `danger-allow-state-serialisation` enables serde on the in-flight
# `PasskeyRegistration` / `PasskeyAuthentication` state types so we can
# stash them server-side between ceremony start and finish (we round-trip
# via JSON in the assay session payload). The "danger-" name reflects
# webauthn-rs's caution that callers MUST keep these blobs server-side
# only — the session router never returns them to the user agent.
webauthn-rs = { version = "0.5", optional = true, features = ["danger-allow-state-serialisation"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any"], optional = true }

# HTTP client for OIDC discovery / userinfo / JWKS fetch / back-channel
# logout (the back-channel logout POST is `application/x-www-form-urlencoded`,
# which `RequestBuilder::form` provides only when the `form` feature is on).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }

[dev-dependencies]
rstest = "0.26"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
