[package]
name = "assay-core"
version = "0.1.0"
categories = ["asynchronous", "database"]
edition = "2024"
keywords = ["workflow", "assay"]
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"
description = "Shared types and store traits for the assay workflow engine and auth layer."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }

# Stream trait for the push-subscription store methods
futures-core = "0.3"
