[package]
name = "assay-dashboard"
version = "0.1.0"
categories = ["web-programming::http-server"]
edition = "2024"
keywords = ["dashboard", "workflow", "auth", "assay"]
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"
description = "Dashboard (HTML + JS + CSS) for assay-workflow and assay-engine. Feature-gated per view set."

[features]
default = ["workflow"]
workflow = []
auth = []

[dependencies]
assay-domain = { path = "../assay-domain", version = "0.1" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
