[package]
name = "assay-dashboard"
version = "0.2.0"
categories = ["web-programming::http-server"]
edition = "2024"
keywords = ["dashboard", "workflow", "auth", "assay"]
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"
description = "Dashboard (HTML + JS + CSS) for assay-workflow and assay-engine. Feature-gated per view set."

[features]
default = ["workflow"]
workflow = []
# Auth console — adds the `/auth/console` SPA + asset routes that
# consume the engine's `/auth/admin/*` endpoints. Conditional on the
# engine binary's `auth` Cargo feature being on; the dashboard crate
# itself never links to `assay-auth` (assets are baked-in HTML/JS).
auth = []

[dependencies]
assay-domain = { path = "../assay-domain", version = "0.2" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
