[package]
# Renamed from `assay-core` to `assay-domain` for v0.13.0 because
# `assay-core` was already taken on crates.io by an unrelated project
# (v3.x series). `assay-domain` accurately describes the contents —
# the workflow-engine domain model (types + the WorkflowStore trait)
# shared across assay-workflow, assay-auth, assay-engine, assay-dashboard.
name = "assay-domain"
version = "0.1.0"
categories = ["asynchronous", "database"]
edition = "2024"
keywords = ["workflow", "assay", "domain"]
license = "Apache-2.0"
repository = "https://github.com/developerinlondon/assay"
description = "Shared workflow domain model (types + store traits) for the assay workflow engine, auth layer, and dashboard."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }

# Stream trait for the push-subscription store methods
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

# Backend implementations of EngineEventBus are feature-gated. Upstream
# crates that only use the trait surface (no impl) don't pay the sqlx
# build cost.
async-stream = { version = "0.3", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"], optional = true }

[features]
default = []
backend-postgres = ["dep:sqlx", "sqlx/postgres", "dep:async-stream"]
backend-sqlite = ["dep:sqlx", "sqlx/sqlite"]

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
